Fixed layer label overlap issue
Increase left padding on label titles to stop them from overlapping
with the toggle boxes

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -8350,7 +8350,7 @@ li.layer {
 
 li.layer .title {
     display: inline-block;
-    padding-left: 10px;
+    padding-left: 30px;
 }
 
 li.layer .color {
